--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,16 @@ header {
     
 }
 
+
+
 /*.body-index {
     width: 100%;
     height: 100vh;
     
 }*/
+
+/* FOOTER */
+footer {
+    background-color: rgb(15, 123, 138);
+    text-align: center;
+}
