--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+/* HEADER */
 header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     background-color: rgb(15, 123, 138);
     font-size: 2vw;
-    
 }
 
 .navbar-nav, .nav-item, .navbarNav {
@@ -14,16 +21,11 @@ header {
     border-color: rgb(15, 123, 138);
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .bg-light {
     --bs-bg-opacity: 0;
 }
-
+/* INDEX */
 .titulo {
     width: 100%;
     height: 90vh;
@@ -42,15 +44,40 @@ header {
 }
 
 
+/* ACERCA DE */
 
-/*.body-index {
-    width: 100%;
-    height: 100vh;
-    
-}*/
+
+.card {
+    width: 30rem;
+    margin: auto;
+    padding: 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: coral;
+
+}
+
+
+
+
+
+
+/* PORTFOLIO */
+
+
+
+
+/* CONTACTO */
+
+
 
 /* FOOTER */
 footer {
     background-color: rgb(15, 123, 138);
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
