agrego borde a la imagen del acerca de

--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,9 @@ body {
 
 .titulo-pagina {
     text-align: center;
+    color: white;
+
 }
-
-
 
 .card {
     width: 60rem;
@@ -75,17 +75,13 @@ body {
 
 .card>img {
     width: 25vw;
-    
+    border: 4px solid rgb(187, 184, 184);
+    border-radius: 5px;
 }
 
 .card-text {
     text-align: justify;
 }
-
-
-
-
-
 
 /* PORTFOLIO */
 
