--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,11 @@
 
 body {
     background-color: var(--colorRojo);
-}
-
-*/
+}*/
 
 
 body {
-    background: url(/img/fondo1.jpg) center center / cover no-repeat fixed;
-    
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/img/fondo1.jpg) center center / cover no-repeat fixed;
 }
 
 /* HEADER */
@@ -208,7 +205,7 @@ header>.bg-light {
 footer {
     background-color: rgb(15, 123, 138);
     text-align: center;
-    position: absolute;
+    
     bottom: 0;
     width: 100%;
 }
