--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,20 @@
     box-sizing: border-box;
 }
 
-/*:root {
-    --color1: ;
-}
-*/
-
-/*
 :root {
-    --colorBordo: rgb(141, 10, 10);
-    --colorAzul: rgb(1, 21, 72);
-    --colorRojo: rgb(141, 60, 60);
-    --fuenteCuerpo: 'Ubuntu', sans-serif;
-    --fuenteTitulo: 'Lobster', sans-serif;
-}
+    --color1: #84DCC6;
+    --color2: #ffffff;
+    --color3: #000000; 
+    --color4: #FFA69E;
 
-body {
-    background-color: var(--colorRojo);
-}*/
+}
 
 
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/img/fondo1.jpg) center center / cover no-repeat fixed;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* HEADER */
@@ -32,21 +25,23 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgb(15, 123, 138);
+    background-color: var(--color4);
     font-size: 2vw;
+    
 }
 
 .navbar-nav, .nav-item, .navbarNav {
-    background-color: rgb(15, 123, 138);
+    background-color: var(--color4);
     padding: 0;
     margin: 0;
-    border-color: rgb(15, 123, 138);
+    
+    
 }
 
 
 header>.bg-light {
     --bs-bg-opacity: 0;
-    /*background-color: rgb(15, 123, 138);*/
+    
 }
 
 
@@ -62,11 +57,19 @@ header>.bg-light {
 
 }
 
-.titulo-index, .subtitulo-index {
-    /*font-size: 11vh;*/
+.titulo-index {
+    color: var(--color1);
 
 }
 
+.subtitulo-index {
+    color: var(--color4);
+}
+
+.titulo-pagina {
+    text-align: center;
+    color: var(--color1);
+}
 
 /* ACERCA DE */
 
@@ -78,6 +81,8 @@ header>.bg-light {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    border: 0.6vw groove var(--color1);
+    
 }
 
 .card-body {
@@ -88,12 +93,25 @@ header>.bg-light {
 
 .card>img {
     width: 25vw;
-    border: 4px solid rgb(187, 184, 184);
+    border: 0.35vw groove var(--color1);
     border-radius: 5px;
 }
 
 .card-text {
     text-align: justify;
+}
+
+.btn {
+    background-color: var(--color1);
+    border-color: var(--color1);
+    color: var(--color3);
+    
+}
+
+.btn:hover {
+    background-color: var(--color4);
+    border-color: var(--color4);
+    color: var(--color3);
 }
 
 /* PORTFOLIO */
@@ -117,6 +135,7 @@ header>.bg-light {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: var(--color1);
 }
 
 .proyecto-imagen>img {
@@ -165,8 +184,13 @@ header>.bg-light {
 }
 
 
-.proyecto-iconos {
+.proyecto-iconos>a {
     font-size: 7.5vw;
+    color: var(--color1);
+}
+
+.proyecto-iconos>a:hover {
+    color: var(--color4);
 }
 
 
@@ -183,8 +207,9 @@ header>.bg-light {
 }
 
 .imagen-contacto>img {
-    width: 35vw;
-    height: 35vh;
+    width: 40vw;
+    height: 40vh;
+    border-radius: 2%;
 }
 
 .accordion-body {
@@ -203,9 +228,10 @@ header>.bg-light {
 
 /* FOOTER */
 footer {
-    background-color: rgb(15, 123, 138);
+    background-color: var(--color4);
     text-align: center;
-    
+    position: relative;
     bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
